[gd_scene load_steps=27 format=3 uid="uid://bb3t3mv33lsuv"]

[ext_resource type="Script" uid="uid://hmxwry4tgvcc" path="res://Scripts/game_manager.gd" id="1_ebdl0"]
[ext_resource type="Texture2D" uid="uid://bdtalujxersyo" path="res://Assets/Scenary/Brown.png" id="2_du5ev"]
[ext_resource type="Texture2D" uid="uid://d2mrlquf8fcxa" path="res://Assets/Scenary/Terrain (16x16).png" id="3_yidnl"]
[ext_resource type="PackedScene" uid="uid://um27qp0riaad" path="res://Scenes/character_body_2d.tscn" id="5_nj6vl"]
[ext_resource type="Script" uid="uid://d4hgorg87qmyb" path="res://Scripts/character_body_2d.gd" id="6_gho1a"]
[ext_resource type="PackedScene" uid="uid://eltdw28mak6d" path="res://Scenes/collectible_coin.tscn" id="7_522i3"]
[ext_resource type="PackedScene" uid="uid://cjc23l2748j4h" path="res://Scenes/Menu.tscn" id="9_ebdl0"]
[ext_resource type="PackedScene" uid="uid://ilr8hiw7jsow" path="res://Scenes/trophy.tscn" id="9_mf6ls"]
[ext_resource type="Texture2D" uid="uid://bij345fjito34" path="res://Assets/Items/CollectibleCoin.png" id="9_wxvsr"]
[ext_resource type="Texture2D" uid="uid://lo304to5gwqi" path="res://Assets/UI y Krita/FrameCharacter back.png" id="10_bb8u3"]
[ext_resource type="Texture2D" uid="uid://ctpath2ulw3g3" path="res://Assets/UI y Krita/HeadCharacter.PNG" id="11_mf6ls"]
[ext_resource type="Texture2D" uid="uid://by3dgupo4efjk" path="res://Assets/UI y Krita/FrameCharacter front.png" id="12_un7op"]
[ext_resource type="Texture2D" uid="uid://do5nwsb4nylje" path="res://Assets/UI y Krita/Capa de Pintura 3.PNG" id="13_bb8u3"]
[ext_resource type="Texture2D" uid="uid://5b77pl3x4yrd" path="res://Assets/UI y Krita/Capa de pintura 1.PNG" id="13_wxvsr"]
[ext_resource type="Texture2D" uid="uid://cxku2q7lgfe6l" path="res://Assets/UI y Krita/Capa de pintura 2.PNG" id="14_bb8u3"]
[ext_resource type="Texture2D" uid="uid://t1eywf4ceoim" path="res://Assets/UI y Krita/Jumps.png" id="15_pi148"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7mycd"]
texture = ExtResource("3_yidnl")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:0/0 = 0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:0/0 = 0
13:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:0/0 = 0
14:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:0/0 = 0
15:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:0/0 = 0
17:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:0/0 = 0
18:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:0/0 = 0
19:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:1/0 = 0
12:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:1/0 = 0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:1/0 = 0
14:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:1/0 = 0
15:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:1/0 = 0
17:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:1/0 = 0
18:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:1/0 = 0
19:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/0 = 0
13:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:2/0 = 0
14:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:2/0 = 0
15:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:2/0 = 0
17:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:2/0 = 0
18:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:2/0 = 0
19:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:4/0 = 0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:5/0 = 0
10:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:6/0 = 0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:8/0 = 0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:8/0 = 0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
6:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:8/0 = 0
7:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:8/0 = 0
8:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:8/0 = 0
9:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:8/0 = 0
10:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
0:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:9/0 = 0
1:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:9/0 = 0
2:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
6:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:9/0 = 0
7:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:9/0 = 0
8:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:9/0 = 0
9:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:9/0 = 0
10:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
0:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:10/0 = 0
1:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:10/0 = 0
2:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:10/0 = 0
6:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:10/0 = 0
7:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:10/0 = 0
8:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSet" id="TileSet_272bh"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_7mycd")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0q2yv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bb8u3"]
atlas = ExtResource("9_wxvsr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mf6ls"]
atlas = ExtResource("9_wxvsr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_un7op"]
atlas = ExtResource("9_wxvsr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkc8d"]
atlas = ExtResource("9_wxvsr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtl6i"]
atlas = ExtResource("9_wxvsr")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi148"]
atlas = ExtResource("9_wxvsr")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_114dm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bb8u3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mf6ls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_un7op")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkc8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtl6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi148")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Node" type="Node"]

[node name="GameManager" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("1_ebdl0")

[node name="SceneObjects" type="Node" parent="."]

[node name="TextureRect" type="TextureRect" parent="SceneObjects"]
texture_filter = 1
anchors_preset = -1
anchor_right = 1.943
anchor_bottom = 0.892
offset_right = 5.66406
offset_bottom = 105.984
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_du5ev")
stretch_mode = 1

[node name="TileMap" type="TileMap" parent="SceneObjects/TextureRect"]
texture_filter = 1
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_272bh")
format = 2
layer_0/tile_data = PackedInt32Array(13, 65536, 8, 14, 65536, 8, 15, 65536, 8, 16, 65536, 8, 17, 65536, 8, 18, 65536, 8, 19, 65536, 8, 20, 65536, 8, 21, 65536, 8, 22, 65536, 8, 23, 65536, 8, 24, 65536, 8, 25, 65536, 8, 26, 65536, 8, 27, 65536, 8, 28, 65536, 8, 29, 65536, 8, 30, 65536, 8, 31, 65536, 8, 32, 65536, 8, 33, 65536, 8, 34, 65536, 8, 393215, 0, 9, 458751, 0, 9, 524287, 0, 9, 589823, 0, 9, 655359, 0, 9, 720895, 0, 9, 786431, 0, 9, 851967, 0, 9, 917503, 0, 9, 983039, 0, 9, 1048575, 0, 9, 1114111, 0, 9, 1179647, 0, 9, 35, 65536, 8, 131071, 0, 9, 196607, 0, 9, 262143, 0, 9, 327679, 0, 9, 0, 65536, 8, 1, 65536, 8, 2, 65536, 8, 3, 65536, 8, 4, 65536, 8, 5, 65536, 8, 6, 65536, 8, 7, 65536, 8, 8, 65536, 8, 9, 65536, 8, 10, 65536, 8, 11, 65536, 8, 12, 65536, 8, 70, 131072, 8, 36, 65536, 8, 37, 65536, 8, 38, 65536, 8, 39, 65536, 8, 40, 65536, 8, 41, 65536, 8, 42, 65536, 8, 43, 65536, 8, 44, 65536, 8, 45, 65536, 8, 46, 65536, 8, 47, 65536, 8, 48, 65536, 8, 49, 65536, 8, 50, 65536, 8, 51, 65536, 8, 52, 65536, 8, 53, 65536, 8, 54, 65536, 8, 55, 65536, 8, 56, 65536, 8, 57, 65536, 8, 58, 65536, 8, 59, 65536, 8, 60, 65536, 8, 61, 65536, 8, 62, 65536, 8, 63, 65536, 8, 64, 65536, 8, 65, 65536, 8, 66, 65536, 8, 67, 65536, 8, 68, 65536, 8, 69, 65536, 8, 65606, 131072, 9, 131142, 131072, 9, 196678, 131072, 9, 262214, 131072, 9, 327750, 131072, 9, 393286, 131072, 9, 458822, 131072, 9, 524358, 131072, 9, 589894, 131072, 9, 655430, 131072, 9, 720966, 131072, 9, 786502, 131072, 9, 852038, 131072, 9, 917574, 131072, 9, 983110, 131072, 9, 1048646, 131072, 9, 1114182, 131072, 9, 1179718, 131072, 9, 65535, 0, 8, 1310719, 0, 9, 1376255, 0, 4, 1441791, 0, 8, 1310720, 65536, 4, 1376256, 65536, 8, 1310721, 65536, 4, 1376257, 65536, 8, 1310722, 65536, 4, 1376258, 65536, 8, 1310723, 65536, 4, 1376259, 65536, 8, 1310724, 65536, 4, 1376260, 65536, 8, 1310725, 65536, 4, 1376261, 65536, 8, 1310726, 65536, 4, 1376262, 65536, 8, 1310727, 65536, 4, 1376263, 65536, 8, 1310728, 65536, 4, 1376264, 65536, 8, 1310729, 65536, 4, 1376265, 65536, 8, 1310730, 65536, 4, 1376266, 65536, 8, 1310731, 65536, 4, 1376267, 65536, 8, 1310732, 65536, 4, 1376268, 65536, 8, 1310733, 65536, 4, 1376269, 65536, 8, 1310734, 65536, 4, 1376270, 65536, 8, 1310735, 65536, 4, 1376271, 65536, 8, 1310736, 65536, 4, 1376272, 65536, 8, 1310737, 65536, 4, 1376273, 65536, 8, 1310738, 65536, 4, 1376274, 65536, 8, 1310739, 65536, 4, 1376275, 65536, 8, 1310740, 65536, 4, 1376276, 65536, 8, 1310741, 65536, 4, 1376277, 65536, 8, 1310742, 65536, 4, 1376278, 65536, 8, 1310743, 65536, 4, 1376279, 65536, 8, 1310744, 65536, 4, 1376280, 65536, 8, 1310745, 65536, 4, 1376281, 65536, 8, 1310746, 65536, 4, 1376282, 65536, 8, 1310747, 65536, 4, 1376283, 65536, 8, 1310748, 65536, 4, 1376284, 65536, 8, 1310749, 65536, 4, 1376285, 65536, 8, 1310750, 65536, 4, 1310751, 65536, 4, 1310752, 65536, 4, 1376288, 65536, 8, 1310753, 65536, 4, 1376289, 65536, 8, 1310754, 65536, 4, 1376290, 65536, 8, 1310755, 65536, 4, 1376291, 65536, 8, 1310756, 65536, 4, 1376292, 65536, 8, 1310757, 65536, 4, 1376293, 65536, 8, 1310758, 65536, 4, 1376294, 65536, 8, 1310759, 65536, 4, 1376295, 65536, 8, 1310760, 65536, 4, 1376296, 65536, 8, 1310761, 65536, 4, 1376297, 65536, 8, 1310762, 65536, 4, 1376298, 65536, 8, 1310763, 65536, 4, 1376299, 65536, 8, 1310764, 65536, 4, 1376300, 65536, 8, 1310765, 65536, 4, 1376301, 65536, 8, 1310766, 65536, 4, 1376302, 65536, 8, 1310767, 65536, 4, 1376303, 65536, 8, 1310768, 65536, 4, 1376304, 65536, 8, 1310769, 65536, 4, 1376305, 65536, 8, 1310770, 65536, 4, 1376306, 65536, 8, 1310771, 65536, 4, 1376307, 65536, 8, 1310772, 65536, 4, 1376308, 65536, 8, 1310773, 65536, 4, 1376309, 65536, 8, 1310774, 65536, 4, 1376310, 65536, 8, 1310775, 65536, 4, 1376311, 65536, 8, 1310776, 65536, 4, 1376312, 65536, 8, 1310777, 65536, 4, 1376313, 65536, 8, 1310778, 65536, 4, 1376314, 65536, 8, 1310779, 65536, 4, 1376315, 65536, 8, 1310780, 65536, 4, 1376316, 65536, 8, 1310781, 65536, 4, 1376317, 65536, 8, 1310782, 65536, 4, 1376318, 65536, 8, 1310783, 65536, 4, 1376319, 65536, 8, 1310784, 65536, 4, 1376320, 65536, 8, 1310785, 65536, 4, 1376321, 65536, 8, 1310786, 65536, 4, 1376322, 65536, 8, 1310787, 65536, 4, 1376323, 65536, 8, 1310788, 65536, 4, 1376324, 65536, 8, 1310789, 65536, 4, 1376325, 65536, 8, 1245254, 131072, 9, 1376326, 131072, 8, 1310790, 131072, 4, 1245183, 0, 9, 1376286, 65536, 8, 1376287, 65536, 8, 1179648, 851968, 1, 1245184, 851968, 2, 1179649, 917504, 1, 1245185, 917504, 2, 1179650, 1114112, 1, 1179651, 1179648, 1, 1179652, 1245184, 1, 1179653, 851968, 1, 1245189, 851968, 2, 1179654, 917504, 1, 1245190, 917504, 2, 1114133, 983040, 1, 1179669, 983040, 1, 1245205, 983040, 2, 131093, 983040, 1, 196629, 983040, 1, 262165, 983040, 1, 327701, 983040, 1, 393237, 983040, 1, 458773, 983040, 1, 524309, 983040, 1, 983061, 983040, 0, 1048597, 983040, 1, 65557, 983040, 0, 1048584, 393216, 8, 1048585, 458752, 8, 1048586, 524288, 8, 917507, 393216, 8, 917508, 524288, 8, 786432, 393216, 8, 786433, 524288, 8, 655364, 393216, 8, 524294, 393216, 8, 393224, 393216, 8, 393228, 524288, 8, 393225, 458752, 8, 393226, 458752, 8, 393227, 458752, 8, 655373, 1114112, 1, 655374, 1179648, 1, 655375, 1245184, 1, 655372, 393216, 8, 655376, 524288, 8, 786452, 1114112, 0, 786453, 1179648, 0, 786454, 1245184, 0, 786451, 393216, 8, 589845, 983040, 2, 1245233, 983040, 2, 1179697, 983040, 1, 1114161, 983040, 1, 1048625, 983040, 1, 983089, 983040, 1, 917553, 983040, 0, 720945, 983040, 2, 589873, 983040, 1, 393265, 983040, 1, 327729, 983040, 1, 262193, 983040, 1, 196657, 983040, 1, 131121, 983040, 1, 65585, 983040, 0, 917550, 1114112, 1, 917551, 1179648, 1, 917552, 1245184, 1, 786455, 131072, 4, 917554, 1114112, 1, 917555, 1179648, 1, 917556, 1245184, 1, 1245206, 0, 10, 1245207, 65536, 10, 1245208, 65536, 10, 1245209, 65536, 10, 1245210, 65536, 10, 1245211, 65536, 10, 1245212, 65536, 10, 1245213, 65536, 10, 1245214, 65536, 10, 1245215, 65536, 10, 1245216, 65536, 10, 1245217, 65536, 10, 1245218, 65536, 10, 1245219, 65536, 10, 1245220, 65536, 10, 1245221, 65536, 10, 1245222, 65536, 10, 1245223, 65536, 10, 1245224, 65536, 10, 1245225, 65536, 10, 1245226, 65536, 10, 1245227, 65536, 10, 1245228, 65536, 10, 1245229, 65536, 10, 1245230, 65536, 10, 1245231, 65536, 10, 1245232, 131072, 10, 983062, 0, 8, 1048598, 0, 9, 1114134, 0, 9, 1179670, 0, 9, 1179696, 131072, 9, 1114160, 131072, 9, 1048624, 131072, 9, 983088, 131072, 8, 655385, 786432, 0, 655386, 851968, 0, 655387, 917504, 0, 1114135, 851968, 1, 1179671, 851968, 2, 1114136, 917504, 1, 1179672, 917504, 2, 1179682, 786432, 0, 1179683, 851968, 0, 1179684, 917504, 0, 1179676, 786432, 0, 1179677, 851968, 0, 1179678, 917504, 0, 589854, 786432, 0, 589855, 917504, 0, 458778, 786432, 1, 327704, 786432, 1, 196635, 786432, 0, 196636, 917504, 0, 327712, 786432, 0, 327713, 851968, 0, 327714, 917504, 0, 458789, 983040, 0, 524325, 983040, 1, 589861, 983040, 2, 458798, 983040, 0, 524334, 983040, 1, 589870, 983040, 2, 327719, 786432, 1, 327722, 786432, 1, 327725, 786432, 1, 655405, 0, 8, 655406, 65536, 8, 720941, 0, 9, 786477, 0, 9, 852013, 0, 9, 983085, 0, 10, 917549, 0, 9, 983086, 65536, 10, 983087, 65536, 10, 655409, 983040, 1, 1179660, 786432, 0, 1179661, 917504, 0, 720939, 786432, 0, 720940, 917504, 0, 917544, 786432, 0, 917545, 917504, 0, 196668, 851968, 1, 196669, 917504, 1, 1114173, 786432, 0, 1179700, 983040, 0, 1245236, 983040, 2, 1114174, 851968, 0, 1114175, 917504, 0, 983106, 786432, 0, 983107, 917504, 0, 589874, 786432, 0, 589875, 851968, 0, 589876, 851968, 0, 589877, 851968, 0, 589878, 851968, 0, 589879, 851968, 0, 589880, 851968, 0, 589881, 851968, 0, 589882, 851968, 0, 589883, 851968, 0, 589884, 851968, 0, 589885, 851968, 0, 589886, 851968, 0, 589887, 851968, 0, 589888, 851968, 0, 589889, 851968, 0, 589890, 917504, 0, 852030, 917504, 0, 852029, 851968, 0, 852028, 786432, 0, 786499, 786432, 1, 720965, 786432, 1, 1179705, 786432, 1, 262199, 393216, 8, 524341, 393216, 10, 458805, 393216, 8, 458801, 983040, 1, 524337, 983040, 1, 393266, 393216, 8, 393267, 524288, 8, 524352, 524288, 8, 524350, 393216, 8, 524351, 458752, 8, 458809, 393216, 8, 458810, 524288, 8, 262204, 851968, 2, 262205, 917504, 2, 196666, 393216, 8, 196671, 1114112, 1, 196672, 1179648, 1, 196673, 1245184, 1, 196675, 393216, 8, 262211, 393216, 9, 327747, 393216, 10)

[node name="Player" parent="SceneObjects" instance=ExtResource("5_nj6vl")]
position = Vector2(-101, 492)
scale = Vector2(0.6, 0.6)
script = ExtResource("6_gho1a")

[node name="Camera2D" type="Camera2D" parent="SceneObjects/Player"]
position = Vector2(1.66667, -1.66669)
position_smoothing_enabled = true
position_smoothing_speed = 8.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_horizontal_offset = 0.5

[node name="CamTimer" type="Timer" parent="SceneObjects/Player"]
wait_time = 0.1

[node name="Collectibles" type="Node" parent="SceneObjects"]

[node name="CollectibleCoin" parent="SceneObjects/Collectibles" instance=ExtResource("7_522i3")]
position = Vector2(293, 129)

[node name="CollectibleCoin2" parent="SceneObjects/Collectibles" instance=ExtResource("7_522i3")]
position = Vector2(378, 513)

[node name="CollectibleCoin3" parent="SceneObjects/Collectibles" instance=ExtResource("7_522i3")]
position = Vector2(1817, 166)

[node name="CollectibleCoin4" parent="SceneObjects/Collectibles" instance=ExtResource("7_522i3")]
position = Vector2(2108, 581)

[node name="CollectibleCoin5" parent="SceneObjects/Collectibles" instance=ExtResource("7_522i3")]
position = Vector2(1372, 288)

[node name="CollectibleCoin6" parent="SceneObjects/Collectibles" instance=ExtResource("7_522i3")]
position = Vector2(1035, 96)

[node name="CollectibleCoin7" parent="SceneObjects/Collectibles" instance=ExtResource("7_522i3")]
position = Vector2(653, 319)

[node name="CollectibleCoin8" parent="SceneObjects/Collectibles" instance=ExtResource("7_522i3")]
position = Vector2(1553, 376)

[node name="Trophy" parent="SceneObjects" instance=ExtResource("9_mf6ls")]
position = Vector2(1917, 29)
target_level = ExtResource("9_ebdl0")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
anchors_preset = -1
anchor_right = 0.12
anchor_bottom = 0.062
offset_left = 2.0
offset_top = 609.0
offset_right = -45.24
offset_bottom = 608.824
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_0q2yv")

[node name="PointsLabel" type="Label" parent="UI/Panel"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -2.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UI/Panel"]
texture_filter = 1
position = Vector2(16, 20)
scale = Vector2(2.3, 2.3)
sprite_frames = SubResource("SpriteFrames_114dm")
autoplay = "default"
frame_progress = 0.524357

[node name="TextureRect" type="TextureRect" parent="UI"]
offset_left = 3.0
offset_top = 7.0
offset_right = 43.0
offset_bottom = 47.0

[node name="TextureRect" type="TextureRect" parent="UI/TextureRect"]
layout_mode = 0
offset_top = -1.0
offset_right = 57.0
offset_bottom = 48.0
texture = ExtResource("10_bb8u3")
expand_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="UI/TextureRect"]
position = Vector2(23, 19)
scale = Vector2(0.25, 0.25)
texture = ExtResource("11_mf6ls")

[node name="TextureRect2" type="TextureRect" parent="UI/TextureRect"]
layout_mode = 0
offset_left = -1.0
offset_top = -5.0
offset_right = 59.0
offset_bottom = 48.0
texture = ExtResource("12_un7op")
expand_mode = 1

[node name="TextureProgressBar" type="TextureProgressBar" parent="UI/TextureRect"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 0
offset_left = 67.0
offset_top = -4.0
offset_right = 467.0
offset_bottom = 196.0
scale = Vector2(0.25, 0.25)
max_value = 8.0
texture_under = ExtResource("13_bb8u3")
texture_over = ExtResource("13_wxvsr")
texture_progress = ExtResource("14_bb8u3")

[node name="Sprite2D" type="Sprite2D" parent="UI"]
texture_filter = 1
position = Vector2(104, 629)
texture = ExtResource("15_pi148")

[node name="JumpLabel" type="Label" parent="UI/Sprite2D"]
unique_name_in_owner = true
texture_filter = 1
offset_left = 21.0
offset_top = -22.0
offset_right = 44.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 30
text = "60"
horizontal_alignment = 1

[connection signal="timeout" from="SceneObjects/Player/CamTimer" to="SceneObjects/Player" method="_on_cam_timer_timeout"]
